# ClutterCoverflowVala

./: Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  picview.vala  test-picview.vala
